<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:materialdesign="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="fill_parent">
	<LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="vertical"
        android:theme="@style/Abt">
		<TextView
			android:text="@string/text_help_description"
            android:textStyle="bold"
            android:textSize="18sp"
			android:layout_width="fill_parent"
			android:layout_height="fill_parent" />
		<TextView
			android:text="@string/text_help_description_content"
            android:layout_width="fill_parent"
			android:layout_height="fill_parent"
            android:layout_marginLeft="15dp"
            android:lineSpacingExtra="@dimen/line_spacing"/>
        <TextView
            android:text="@string/features"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" />
        <TextView
            android:text="@string/features_text"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginLeft="15dp"
            android:lineSpacingExtra="@dimen/line_spacing"/>
				<TextView
			android:text="@string/text_help_setup"
			android:textStyle="bold"
            android:textSize="18sp"
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
            android:lineSpacingExtra="@dimen/line_spacing"/>
			<TextView
			android:text="@string/server"
			android:textStyle="bold"
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
            android:layout_marginLeft="12dp"/>
			<TextView
			android:text="@string/text_help_server_content"
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
            android:layout_marginLeft="15dp"
            android:lineSpacingExtra="@dimen/line_spacing"/>

        <TextView
            android:text="@string/Down"
            android:textStyle="bold"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginLeft="12dp"
            android:autoLink="web"
            android:id="@+id/dow"/>

			<TextView
			android:text="@string/client"
			android:textStyle="bold"
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
                android:layout_marginLeft="12dp"/>
		<TextView
			android:text="@string/text_help_setup_content"
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
            android:lineSpacingExtra="@dimen/line_spacing"
            android:layout_marginLeft="15dp"/>
		<TextView
			android:text="@string/text_help_usage"
			android:textStyle="bold"
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
            android:textSize="18sp"/>
		<TextView
			android:text="@string/text_help_usage_content"
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
            android:lineSpacingExtra="@dimen/line_spacing"
            android:layout_marginLeft="15dp"
            />
		<TextView
			android:text="@string/text_help_ts"
			android:textStyle="bold"
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
            android:textSize="18sp"/>
			<TextView
			android:text="@string/ts1"
            android:textStyle="bold"
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
            android:layout_marginLeft="12dp"
                />
		<TextView
			android:text="@string/text_help_ts1_content"
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
            android:lineSpacingExtra="@dimen/line_spacing"
            android:layout_marginLeft="17dp"/>
					<TextView
			android:text="@string/ts2"
            android:textStyle="bold"
			android:layout_width="fill_parent"
			android:layout_height="fill_parent" />
		<TextView
			android:text="@string/text_help_ts2_content"
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
            android:lineSpacingExtra="@dimen/line_spacing"
            android:layout_marginLeft="17dp"/>
				<TextView
			android:text="@string/ts3"
                    android:textStyle="bold"
			android:layout_width="fill_parent"
			android:layout_height="fill_parent" />
		<TextView
			android:text="@string/text_help_ts3_content"
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
            android:lineSpacingExtra="@dimen/line_spacing"
            android:layout_marginLeft="17dp"/>

				<TextView
				    android:layout_width="fill_parent"
				    android:layout_height="fill_parent"
				    android:layout_gravity="center"
				    android:text="@string/bug"
                    android:textStyle="bold"
				    android:textSize="16sp"
                    android:lineSpacingExtra="1dp"/>
    </LinearLayout>
</ScrollView>
        <com.gc.materialdesign.views.ButtonFloatSmall
            android:id="@+id/search"
            android:layout_width="@dimen/float_size"
            android:layout_height="@dimen/float_size"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginRight="24dp"
            android:layout_marginBottom="35dp"
            android:background="@color/myPrimaryColor"
            android:onClick="tutorial"
            materialdesign:animate="true"
            materialdesign:iconSize="50dp"
            materialdesign:iconDrawable="@drawable/fab_tutorial"
            android:layout_gravity="right|bottom" />

</RelativeLayout>

