<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
	<Button
		android:id="@+id/save"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/text_save" />
	<TableRow>
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/text_name" />
		<com.rengwuxian.materialedittext.MaterialEditText
			android:id="@+id/name"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:hint="@string/text_new_connection"
            app:primaryColor="@color/myAccentColor"
            app:floatingLabel="highlight"/>
	</TableRow>
	<TableRow>
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/text_password" />
		<com.rengwuxian.materialedittext.MaterialEditText
			android:id="@+id/password"
			android:inputType="textPassword"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
            app:primaryColor="@color/myAccentColor"
            app:floatingLabel="highlight"/>
	</TableRow>

</merge>