<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:circle="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <com.styx.steer.Client.View.CircleLayout
        android:id="@+id/main_circle_layout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/main_selected_textView"
        android:layout_gravity="center_horizontal"
        circle:firstChildPosition="South"
        circle:isRotating="true"
        circle:rotateToCenter="true"
        circle:speed="75">

        <com.styx.steer.Client.View.CircleImageView
            android:id="@+id/presentation"
            android:layout_width="@dimen/circle_width"
            android:layout_height="@dimen/circle_height"
            android:src="@drawable/home_ppt"
            circle:name="@string/Presentation" />

        <com.styx.steer.Client.View.CircleImageView
            android:id="@+id/browser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/home_browser"
            circle:name="@string/Browser" />

        <com.styx.steer.Client.View.CircleImageView
            android:id="@+id/media"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/home_media"
            circle:name="@string/Media" />

    </com.styx.steer.Client.View.CircleLayout>

    <TextView
        android:id="@+id/main_selected_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="110dp"
        android:textColor="@color/ppt"
        android:textSize="22sp"
        android:textStyle="bold" />


</RelativeLayout>
